Fixed issue with image expanding offscreen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,12 @@ header {
     border-top: solid 1px;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+/* Code for button style */
 .button {
     display: flex;
     background-color: lightblue;
@@ -40,6 +46,7 @@ div.scroll {
     margin: 10px;
 }
 
+/* Code for style of 3 main columns */
 .main-container {
     display: flex;
     justify-content: space-between;
